# hivekit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/scripts/: resolve_app_bin.py
.github/workflows/: build.yml  release.yml
components/hivekit/: CMakeLists.txt  Kconfig  hivekit_board.c  hivekit_button.c  hivekit_core.c  hivekit_led.c  hivekit_reporting.c  idf_component.yml
components/hivekit/include/: hivekit.h  hivekit_board.h
converters/: hivekit-bme280.js  hivekit-pir.js  hivekit-scd40.js  hivekit-scd40.mjs  hivekit-sht40.js
docs/: architecture-decision.md  architecture.md  button-led-spec.md  flasher.md  links.md  mvp-roadmap.md  phase0-flash-plan.md  phase1-plan.md  research-and-plan.md  roadmap.md  state-of-the-art.md
docs/plans/: pairing-and-roaming-fix.md  task7-tclk-research.md  web-flasher-rebuild.md
flasher/: index.html  manifest-bme280-c6-dev.json  manifest-bme280-c6.json  manifest-pir-c6-dev.json  manifest-pir-c6.json  manifest-scd40-c6-dev.json  manifest-scd40-c6.json  manifest-sht40-c6-dev.json  manifest-sht40-c6.json  manifest-template.json  style.css
sensors/bme280-c6/: CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig.defaults
sensors/bme280-c6/main/: CMakeLists.txt  idf_component.yml  main.c  (+2 more)
sensors/pir-c6/: CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig.defaults
sensors/scd40-c6/: CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig.defaults
sensors/sht40-c6/: CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig.defaults
(+15 files in other folders)
